--- a/desafio012/estilo/style.css
+++ b/desafio012/estilo/style.css
@@ -1,1 +1,66 @@
 @charset "UTF-8";
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    min-height: 100%;
+    background-color: dimgray;
+}
+
+header {
+    background-color: black;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+header>h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+
+header>p {
+    padding-bottom: 50px;
+}
+
+a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2.5em;
+    padding-left: 60px;
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgb(121, 121, 121);
+    color: rgb(255, 255, 255);
+}
+
+section.imagem>p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.267);
+}
+
+footer {
+    background-color: black;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 15px;
+}
