--- a/desafio012/estilo/style.css
+++ b/desafio012/estilo/style.css
@@ -1,12 +1,23 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, tahoma, sans-serif;
+    --font2: 'Passion One', sans-serif;
+    --font3: 'Sriracha', cursive;
+}
+
 
 * {
     margin: 0;
     padding: 0;
+
 }
 
 html,
 body {
+    font-family: var(--font1);
     min-height: 100%;
     background-color: dimgray;
 }
@@ -20,11 +31,15 @@ header {
 header>h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 9vw;
 }
 
 header>p {
     padding-bottom: 50px;
+    font-size: 1.3em;
 }
+
 
 a {
     color: rgb(255, 255, 255);
@@ -40,7 +55,9 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2.5em;
-    padding-left: 60px;
+    padding-left: 50px;
+    font-family: var(--font3);
+    font-size: 3.4vw;
 }
 
 section.normal {
@@ -50,12 +67,13 @@ section.normal {
 
 section.imagem {
     background-color: rgb(121, 121, 121);
-    color: rgb(255, 255, 255);
+    color: rgb(14, 8, 8);
 }
 
 section.imagem>p {
-    width: 400px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.267);
+    padding: 10px;
 }
 
 footer {
